--- a/my-appointments.html
+++ b/my-appointments.html
@@ -33,13 +33,16 @@
             <a href="my-appointments.html" class="menu-item active">
                 <i class="fas fa-calendar-alt"></i> My Appointments
             </a>
+            <a href="medical-history.html" class="menu-item">
+                <i class="fas fa-file-medical"></i> Medical History
+            </a>
             <a href="my-records.html" class="menu-item">
-                <i class="fas fa-file-medical"></i> Medical Records
+                <i class="fas fa-folder-open"></i> Medical Records
             </a>
             <a href="#" class="menu-item">
                 <i class="fas fa-book-medical"></i> Health Resources
             </a>
-            <a href="#" class="menu-item">
+            <a href="contact-worker.html" class="menu-item">
                 <i class="fas fa-comment-medical"></i> Contact Health Worker
             </a>
             <a href="index.html" class="menu-item" style="margin-top: auto; color: var(--error-color);">
