--- a/doctor-dashboard.html
+++ b/doctor-dashboard.html
@@ -54,7 +54,8 @@
                 <i class="fas fa-bell"></i>
                 <span class="notification-badge">5</span>
             </div>
-            <div style="display: flex; align-items: center; gap: 10px;">
+            <div style="display: flex; align-items: center; gap: 10px; cursor: pointer;"
+                onclick="window.location.href='doctor-profile.html'">
                 <div style="text-align: right; line-height: 1.2;">
                     <div style="font-weight: 600; font-size: 14px;">Dr. Maria Clara</div>
                     <div style="font-size: 11px; color: var(--text-secondary);">Midwife</div>
@@ -162,6 +163,17 @@
                             <button class="btn btn-sm btn-secondary">Contact</button>
                         </li>
                     </ul>
+                </div>
+
+                <!-- Notifications -->
+                <div class="card">
+                    <div class="card-header">
+                        <span>Notifications</span>
+                        <a href="#" class="text-small" style="color: var(--primary-color);">View All</a>
+                    </div>
+                    <div class="notification-list" style="display: flex; flex-direction: column; gap: 0;">
+                        <!-- Notifications will be loaded here -->
+                    </div>
                 </div>
 
                 <!-- Recent Activity -->
