--- a/profiles.html
+++ b/profiles.html
@@ -268,6 +268,8 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary close-modal">Close</button>
+                <button id="exportPatientBtn" class="btn btn-success" style="margin-right: 8px;"><i
+                        class="fas fa-file-pdf"></i> Export Patient Records</button>
                 <button class="btn btn-primary">Edit Profile</button>
             </div>
         </div>
@@ -340,7 +342,10 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/export-service.js"></script>
     <script src="js/script.js"></script>
 </body>
 
